# py-dolphin-memory-engine

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  _dolphin_memory_engine.pyx  appveyor.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release.yml
.github/workflows/: dependabot.yml  dependency.yml  python.yml
Source/: CMakeLists.txt
Source/Common/: CommonUtils.h  MemoryCommon.cpp
Source/DolphinProcess/: DolphinAccessor.cpp  DolphinAccessor.h  IDolphinProcess.h
Source/DolphinProcess/Dummy/: DummyDolphinProcess.cpp  DummyDolphinProcess.h
Source/DolphinProcess/Linux/: LinuxDolphinProcess.cpp  LinuxDolphinProcess.h
Source/DolphinProcess/Mac/: MacDolphinProcess.cpp  MacDolphinProcess.h
Source/DolphinProcess/Windows/: WindowsDolphinProcess.cpp  WindowsDolphinProcess.h
Source/MemoryWatch/: MemWatchEntry.cpp  MemWatchEntry.h
dolphin_memory_engine/: __init__.py
python_src/dolphin_memory_engine/: __init__.py
test/: test_native.py
tests/: test_native.py
travis-scripts/: build.sh
