[build-system]
requires = [
    "setuptools>=61.2",
    "Cython>=0.29.21",
    "setuptools_scm[toml]>=6.4",
    "setuptools-cmake-helper>=0.1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin-memory-engine"
description = "Hooks into the memory of a running Dolphin processes, allowing access to the game memory."
authors = [{name = "Henrique Gemignani"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/henriquegemignani/py-dolphin-memory-engine"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "python_src/dolphin_memory_engine/version.py"
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "C4",
    "RSE",
    "TCH",
    "PTH",
    "COM818", "COM819",
    "ISC",
    "PIE",
    "PT",

    "PLC",

    "PLE",
    "PLR0402", "PLR1711", "PLR1722", "PLR0206",
    "PLR0133", "PLR0124",
    "PLW",
    "SIM101",
]
extend-ignore = [
    "ISC001",  # may cause conflicts with formatter
]
