[metadata]
name = dolphin-memory-engine
description = Hooks into the memory of a running Dolphin processes, allowing access to the game memory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henriquegemignani/py-dolphin-memory-engine
author = Henrique Gemignani
license_files =
    LICENSE

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = dolphin_memory_engine
install_requires =
   
include_package_data = True
zip_safe = False
python_requires = >=3.7
